--- a/student_stream.html
+++ b/student_stream.html
@@ -77,7 +77,7 @@
                             </div>
                         </div>
                         <div>
-                            <button>Join</button>
+                            <button id="btnJoin">Join</button>
                         </div>
                     </div>
                     <div class="assignments">
