implemented the toggling of the join class modal

--- a/classrooms.html
+++ b/classrooms.html
@@ -13,7 +13,7 @@
             referrerpolicy="no-referrer"/>
         <title>Classrooms</title>
     </head>
-    <body class="no-overflow">
+    <body >
         <!-- MANAGE ACCOUNT MODAL -->
         <div id="manage-account-modal" class="manage-account-modal hide">
             <div class="manage-account-modal-top">
@@ -61,7 +61,7 @@
                 <!-- <div class="plus-icon">
                     <i class="fa-solid fa-plus fa-lg"></i>
                 </div> -->
-                <div class="join-class">
+                <div id="join-class-button" class="join-class">
                     <button >Join class</button>
                 </div>
                 <div class="create-class">
@@ -177,7 +177,7 @@
                 </div>
             </div>
             <!-- JOIN CLASS MODAL -->
-            <div class="join-class-modal">
+            <div id="join-class-modal" class="join-class-modal hide">
                 <div class="join-class-modal-header">
                     <div class="left">
                         <div class="close-join-class-icon">
