Added add_topic in js

--- a/classrooms.html
+++ b/classrooms.html
@@ -112,6 +112,9 @@
                             <input required id="classname-input" placeholder="Class name (required)" type="text">
                         </div>
                         <div>
+                            <input required id="googleMeetLink-input" placeholder="Google meet link (required)" type="text">
+                        </div>
+                        <div>
                             <input id="section-input" placeholder="Section" type="text">
                         </div>
                         <div>
