--- a/forget_password.html
+++ b/forget_password.html
@@ -21,7 +21,7 @@
                     <div class="verify-heading">Verify it's you</div>
                     <div class="user-email">
                         <i class="fa-solid fa-user"></i>
-                        mohammad.hussein377@gmail.com
+                        <div class="email">mohammad.hussein377@gmail.com</div>
                         <i class="fa-solid fa-caret-down"></i>
                     </div>
                 </div>
@@ -29,33 +29,36 @@
                     <div class="inputs">
                         <div class="column">
                             <div>
-                                <label for="fav-color">What's your favourite color?</label>
+                                <label for="fav-color">What's your lucky number?</label>
                             </div>
                             <div><input id="fav-color" placeholder="Enter your favourite color?" type="text"></div>
                         </div>
+                        <p class="answer-error hide">Your answer is wrong</p>
                         <div class="column">
                             <div>
                                 <label for="password">Password</label>
                             </div>
-                            <div><input id="password" placeholder="Enter your password" type="password" disabled></div>
+                            <div><input required id="password" placeholder="Enter your password" type="password" disabled></div>
                         </div>
                         <div class="column">
                             <div>
                                 <label for="confirm-password">Confirm Password</label>
                             </div>
                             <div><input
+                                required
                                 id="confirm-password"
                                 placeholder="Confirm your password"
                                 type="password"
                                 disabled></div>
                         </div>
+                        <p class="passwords-error hide">Passwords don't match</p>
                     </div>
                     <div>
                         <!-- <div class="create-account">Check</div> -->
                         <div id="check-button" class="check-button">
                             <button>Check</button>
                         </div>
-                        <div class="login-button hide">
+                        <div id="change-password-button" class="change-password-button hide">
                             <button>Change Password</button>
                         </div>
                     </div>
