--- a/teacher_stream.html
+++ b/teacher_stream.html
@@ -134,7 +134,7 @@
 
                     </div>
                     <div class="announcements">
-                        <div class="announcement">
+                        <!-- <div class="announcement"> -->
                             <!-- <div class="announcement-top">
                                 <div>
                                     <div class="user-data">
@@ -164,7 +164,7 @@
                                 </div>
                             </div> -->
 
-                        </div>
+                        <!-- </div> -->
 
                         <!-- <div class="announcement">
                             <div class="announcement-top">
