finished the classwork page for the student

--- a/student_classwork.html
+++ b/student_classwork.html
@@ -134,9 +134,6 @@
                 <div>People</div>
             </div>
             <div class="right-classroom-navbar">
-                <div class="settings-icon">
-                    <i class="fa-solid fa-gear fa-lg"></i>
-                </div>
                 <div>
                     <i class="fa-solid fa-border-none fa-lg"></i>
                 </div>
@@ -149,7 +146,7 @@
         </div>
         <div class="classwork-content">
             <div class="topics-section">
-                <p>All topics</p>
+                <p style="color: black; font-weight: bold;">All topics</p>
                 <div>
                     <p>UIX</p>
                     <p>Soft Skills</p>
@@ -157,45 +154,39 @@
             </div>
             <div class="classwork-right">
                 <div class="classwork-header">
-                    <div id="create-button" class="button">
-                        <div>
-                            <i class="fa-solid fa-plus"></i>
+                    <div
+                        class="view-your-work"
+                        style="display: flex; align-items: center; gap: 20px;">
+                        <div style="color: black;">
+                            <i class="fa-regular fa-circle-user"></i>
                         </div>
-                        <div>Create</div>
-                        <div  id="drop-down" class="list hide">
-                            <div id="create-assignment-button" class="list-item">
-                                <div class="icon">
-                                    <i class="fa-solid fa-clipboard-list fa-xl"></i>
-                                </div>
-                                <div class="list-title">Assignment</div>
-                            </div>
-                            <div id="create-topic-button" class="list-item">
-                                <div class="icon">
-                                    <i class="fa-solid fa-rectangle-list ga-xl"></i>
-                                </div>
-                                <div class="list-title">Topic</div>
-                            </div>
-                        </div>
+                        <div style="font-weight: bold;">View your work</div>
                     </div>
                     <div class="apps">
-                        <div>
-                            <div>
-                                <i class="fa-regular fa-calendar"></i>
+                        <div style="color: black;">
+                            <div style="color: black;">
+                                <i class="fa-solid fa-camera"></i>
                             </div>
-                            <p>Google Calendar</p>
+                            <p>Meet</p>
                         </div>
                         <div>
-                            <div>
+                            <div style="color: black;">
+                                <i class="fa-regular fa-calendar"></i>
+                            </div>
+                            <p style="color: black;">Google Calendar</p>
+                        </div>
+                        <div>
+                            <div style="color: black;">
                                 <i class="fa-brands fa-google-drive"></i>
                             </div>
-                            <p>Class Drive folder</p>
+                            <p style="color: black;">Class Drive folder</p>
                         </div>
                     </div>
                 </div>
                 <div class="topics">
                     <div class="topic">
                         <div class="topic-header">
-                            <div class="topic-name">UIX</div>
+                            <div class="topic-name" style="color: black;">UIX</div>
                             <div>
                                 <i class="fa-solid fa-ellipsis-vertical"></i>
                             </div>
@@ -203,7 +194,7 @@
                         <div class="assignments">
                             <div class="assignment">
                                 <div class="assignment-data">
-                                    <div>
+                                    <div style="background-color: #ccc;">
                                         <i class="fa-regular fa-rectangle-list fa-lg"></i>
                                     </div>
                                     <div class="assignment-name">Assignment One</div>
@@ -212,7 +203,7 @@
                             </div>
                             <div class="assignment">
                                 <div class="assignment-data">
-                                    <div>
+                                    <div style="background-color: #ccc;">
                                         <i class="fa-regular fa-rectangle-list fa-lg"></i>
                                     </div>
                                     <div class="assignment-name">Assignment One</div>
@@ -223,7 +214,7 @@
                     </div>
                     <div class="topic">
                         <div class="topic-header">
-                            <div class="topic-name">UIX</div>
+                            <div class="topic-name" style="color: black;">UIX</div>
                             <div>
                                 <i class="fa-solid fa-ellipsis-vertical"></i>
                             </div>
@@ -231,7 +222,7 @@
                         <div class="assignments">
                             <div class="assignment">
                                 <div class="assignment-data">
-                                    <div>
+                                    <div style="background-color: #ccc;">
                                         <i class="fa-regular fa-rectangle-list fa-lg"></i>
                                     </div>
                                     <div class="assignment-name">Assignment One</div>
@@ -240,7 +231,7 @@
                             </div>
                             <div class="assignment">
                                 <div class="assignment-data">
-                                    <div>
+                                    <div style="background-color: #ccc;">
                                         <i class="fa-regular fa-rectangle-list fa-lg"></i>
                                     </div>
                                     <div class="assignment-name">Assignment One</div>
