fetched the classes of the user and the topics of the classes and displayed them in the modal to create an assignment

--- a/teacher_classwork.html
+++ b/teacher_classwork.html
@@ -101,18 +101,10 @@
                             <div class="classes-dropdown">
                                 <button class="dropdown-toggle" id="dropdownToggle"></button>
                                 <div class="dropdown-menu" id="dropdownMenu">
-                                    <div class="dropdown-item">
-                                        <label><input disabled checked type="checkbox" value="option1">
-                                            Option 1</label>
-                                    </div>
-                                    <div class="dropdown-item">
-                                        <label><input type="checkbox" value="option2">
-                                            Option 2</label>
-                                    </div>
-                                    <div class="dropdown-item">
-                                        <label><input type="checkbox" value="option3">
-                                            Option 3</label>
-                                    </div>
+                                    <!-- <div class="dropdown-item">
+                                        <label><input disabled checked type="checkbox">
+                                            Select your classes</label>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
@@ -123,8 +115,8 @@
                         <div class="topics-sidebar-section">
                             <label for="topics">Topic</label>
                             <select id="topics">
-                                <option value="UIX">UIX</option>
-                                <option value="Soft Skills">Soft Skills</option>
+                                <!-- <option value="UIX">UIX</option>
+                                <option value="Soft Skills">Soft Skills</option> -->
                             </select>
                         </div>
                     </div>
