Added tabs redirection

--- a/student_stream.html
+++ b/student_stream.html
@@ -28,9 +28,9 @@
                 </div>
             </div>
             <div class="tabs">
-                <div>Stream</div>
-                <div>Classwork</div>
-                <div>People</div>
+                <div id="stream-id">Stream</div>
+        <div id="classwork-id">Classwork</div>
+        <div id="people-id">People</div>
             </div>
             <div class="right-classroom-navbar">
                 <!-- <div class="settings-icon">
