--- a/teacher_stream.html
+++ b/teacher_stream.html
@@ -27,9 +27,9 @@
                 </div>
             </div>
             <div class="tabs">
-                <div>Stream</div>
-                <div>Classwork</div>
-                <div>People</div>
+                <div id="stream-id">Stream</div>
+                <div id="classwork-tab">Classwork</div>
+                <div id="people-tab">People</div>
             </div>
             <div class="right-classroom-navbar">
                 <div class="settings-icon">
