added topics dynamically from the database

--- a/student_classwork.html
+++ b/student_classwork.html
@@ -147,9 +147,8 @@
         <div class="classwork-content">
             <div class="topics-section">
                 <p style="color: black; font-weight: bold;">All topics</p>
-                <div>
-                    <p>UIX</p>
-                    <p>Soft Skills</p>
+                <div id="topic_name">
+                    
                 </div>
             </div>
             <div class="classwork-right">
