showing assignments under topic dynamically from the database

--- a/student_classwork.html
+++ b/student_classwork.html
@@ -184,61 +184,10 @@
                 </div>
                 <div class="topics">
                     <div class="topic">
-                        <div class="topic-header">
-                            <div class="topic-name" style="color: black;">UIX</div>
-                            <div>
-                                <i class="fa-solid fa-ellipsis-vertical"></i>
-                            </div>
+                        <div id="topic-ass">
+
                         </div>
-                        <div class="assignments">
-                            <div class="assignment">
-                                <div class="assignment-data">
-                                    <div style="background-color: #ccc;">
-                                        <i class="fa-regular fa-rectangle-list fa-lg"></i>
-                                    </div>
-                                    <div class="assignment-name">Assignment One</div>
-                                </div>
-                                <div class="date">Posted 2:36PM</div>
-                            </div>
-                            <div class="assignment">
-                                <div class="assignment-data">
-                                    <div style="background-color: #ccc;">
-                                        <i class="fa-regular fa-rectangle-list fa-lg"></i>
-                                    </div>
-                                    <div class="assignment-name">Assignment One</div>
-                                </div>
-                                <div class="date">Posted 2:36PM</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="topic">
-                        <div class="topic-header">
-                            <div class="topic-name" style="color: black;">UIX</div>
-                            <div>
-                                <i class="fa-solid fa-ellipsis-vertical"></i>
-                            </div>
-                        </div>
-                        <div class="assignments">
-                            <div class="assignment">
-                                <div class="assignment-data">
-                                    <div style="background-color: #ccc;">
-                                        <i class="fa-regular fa-rectangle-list fa-lg"></i>
-                                    </div>
-                                    <div class="assignment-name">Assignment One</div>
-                                </div>
-                                <div class="date">Posted 2:36PM</div>
-                            </div>
-                            <div class="assignment">
-                                <div class="assignment-data">
-                                    <div style="background-color: #ccc;">
-                                        <i class="fa-regular fa-rectangle-list fa-lg"></i>
-                                    </div>
-                                    <div class="assignment-name">Assignment One</div>
-                                </div>
-                                <div class="date">Posted 2:36PM</div>
-                            </div>
-                        </div>
-                    </div>
+                    </div>                   
                 </div>
             </div>
         </div>
