--- a/teacher_classwork.html
+++ b/teacher_classwork.html
@@ -30,13 +30,13 @@
                     <div>Assignment</div>
                 </div>
                 <div class="assign-button">
-                    <button>Assign</button>
+                    <button id="assign-button">Assign</button>
                 </div>
             </div>
             <div class="modal-assignment-bottom">
                 <div class="modal-assignment-main">
                     <div class="modal-assignment-input">
-                        <input class="assignment-title" placeholder="Title" type="text">
+                        <input class="assignment-title" placeholder="Title" type="text" id="assignment-title-input">
                         <!-- <div class="text-input">
                             <div id="editor">
                                 <p></p>
@@ -49,7 +49,7 @@
                         </div> -->
                         <div class="text-input">
                             <div id="editor" style="border: none;">
-                                <p></p>
+                                <p id="editor-text"></p>
                             </div>
                             <div id="toolbar" class="toolbar" style="border: none">
                                 <button class="ql-bold">Bold</button>
