created the assignment page

--- a/teacher_classwork.html
+++ b/teacher_classwork.html
@@ -30,7 +30,7 @@
                     <div>Assignment</div>
                 </div>
                 <div class="assign-button">
-                    <button>Assign</button>
+                    <button id="assign-button" class="" disabled>Assign</button>
                 </div>
             </div>
             <div class="modal-assignment-bottom">
