implemented the structure of the modal to invite students

--- a/teacher_people.html
+++ b/teacher_people.html
@@ -152,7 +152,29 @@
                         </div>
                         <div class="student-name">Charbel Dauod</div>
                     </div>
-
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="invite-students-modal">
+        <div class="box">
+            <div>Invite students</div>
+            <div><input placeholder="Type a name or email" type="text"></div>
+            <div class="emails">
+                <div class="email">
+                    <div class="profile-pic"><img src="" alt="profile picture"></div>
+                    <div class="user-data">
+                        <div class="name">Mhmd Hussein</div>
+                        <div class="email">mohammad.hussein377@gmail.com</div>
+                    </div>
+                </div>
+            </div>
+            <div class="buttons">
+                <div>
+                    <button>Cancel</button>
+                </div>
+                <div>
+                    <button>Invite</button>
                 </div>
             </div>
         </div>
