styled the modal to invite students to a class

--- a/teacher_people.html
+++ b/teacher_people.html
@@ -162,19 +162,64 @@
             <div><input placeholder="Type a name or email" type="text"></div>
             <div class="emails">
                 <div class="email">
-                    <div class="profile-pic"><img src="" alt="profile picture"></div>
                     <div class="user-data">
-                        <div class="name">Mhmd Hussein</div>
-                        <div class="email">mohammad.hussein377@gmail.com</div>
+                        <div class="dropdown-item">
+                            <label><input type="checkbox" value="1">
+                                <div class="details">
+                                    <div class="name">Mhmd Hussein</div>
+                                    <div class="">mohammad.hussein377@gmail.com</div>
+                                </div>
+                            </label>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="email">
+                    <div class="user-data">
+                        <div class="dropdown-item">
+                            <label><input type="checkbox" value="2">
+                                <div class="details">
+                                    <div class="name">Mhmd Hussein</div>
+                                    <div class="">mohammad.hussein377@gmail.com</div>
+                                </div>
+                            </label>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="email">
+                    <div class="user-data">
+                        <div class="dropdown-item">
+                            <label><input type="checkbox" value="3">
+                                <div class="details">
+                                    <div class="name">Mhmd Hussein</div>
+                                    <div class="">mohammad.hussein377@gmail.com</div>
+                                </div>
+                            </label>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="email">
+                    <div class="user-data">
+                        <div class="dropdown-item">
+                            <label><input type="checkbox" value="4">
+                                <div class="details">
+                                    <div class="name">Mhmd Hussein</div>
+                                    <div class="">mohammad.hussein377@gmail.com</div>
+                                </div>
+                            </label>
+                        </div>
+
                     </div>
                 </div>
             </div>
             <div class="buttons">
                 <div>
-                    <button>Cancel</button>
+                    <button class="cancel-button">Cancel</button>
                 </div>
                 <div>
-                    <button>Invite</button>
+                    <button disabled class="invite-button">Invite</button>
                 </div>
             </div>
         </div>
