making the pages responsive

--- a/student_classwork.html
+++ b/student_classwork.html
@@ -17,106 +17,6 @@
         <title>Classwork</title>
     </head>
     <body>
-        <!-- ASSIGNMENT MODAL -->
-        <div id="modal-assignment" class="modal-assignment hide">
-            <div class="modal-assignment-header">
-                <div class="modal-assignment-header-left">
-                    <div id="close-assignment" class="x-icon">
-                        <i class="fa-solid fa-x"></i>
-                    </div>
-                    <div>
-                        <i class="fa-solid fa-table-list"></i>
-                    </div>
-                    <div>Assignment</div>
-                </div>
-                <div class="assign-button">
-                    <button>Assign</button>
-                </div>
-            </div>
-            <div class="modal-assignment-bottom">
-                <div class="modal-assignment-main">
-                    <div class="modal-assignment-input">
-                        <input class="assignment-title" placeholder="Title" type="text">
-                        <!-- <div class="text-input">
-                            <div id="editor">
-                                <p></p>
-                            </div>
-                            <div id="toolbar" class="toolbar">
-                                <button class="ql-bold">Bold</button>
-                                <button class="ql-italic">Italic</button>
-                                <button class="ql-underline">Underline</button>
-                            </div>
-                        </div> -->
-                        <div class="text-input">
-                            <div id="editor" style="border: none;">
-                                <p></p>
-                            </div>
-                            <div id="toolbar" class="toolbar" style="border: none">
-                                <button class="ql-bold">Bold</button>
-                                <button class="ql-italic">Italic</button>
-                                <button class="ql-underline">Underline</button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="modal-assignment-attachments">
-                        <h4>Attach</h4>
-                        <div class="attachments">
-                            <div>
-                                <div class="icon">
-                                    <i class="fa-brands fa-google-drive"></i>
-                                </div>
-                                <div>Drive</div>
-                            </div>
-                            <div>
-                                <div class="icon">
-                                    <i class="fa-brands fa-youtube"></i>
-                                </div>
-                                <div>Youtube</div>
-                            </div>
-                            <div>
-                                <div class="icon">
-                                    <i class="fa-solid fa-plus"></i>
-                                </div>
-                                <div>Create</div>
-                            </div>
-                            <div>
-                                <div class="icon">
-                                    <i class="fa-solid fa-upload"></i>
-                                </div>
-                                <div>Upload</div>
-                            </div>
-                            <div>
-                                <div class="icon">
-                                    <i class="fa-solid fa-link"></i>
-                                </div>
-                                <div>Link</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="assignment-sidebar">
-                    <div>
-                        <div>For</div>
-                        <input placeholder="Group Project" type="text">
-                    </div>
-                    <div>
-                        <div>Due</div>
-                        <input placeholder="No due date" type="text">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- TOPIC MODAL -->
-        <div id="topic-modal" class="add-topic-modal hide">
-            <div id="topic-box" class="box">
-                <p>Add topic</p>
-                <div><input placeholder="Topic" type="text"></div>
-                <div class="buttons">
-                    <button class="cancel-button">Cancel</button>
-                    <button>Add</button>
-                </div>
-            </div>
-        </div>
         <!-- NAVBAR -->
         <div class="classroom-navbar">
             <div class="left-classroom-navbar">
@@ -167,19 +67,19 @@
                             <div style="color: black;">
                                 <i class="fa-solid fa-camera"></i>
                             </div>
-                            <p>Meet</p>
+                            <p class="meet">Meet</p>
                         </div>
                         <div>
                             <div style="color: black;">
                                 <i class="fa-regular fa-calendar"></i>
                             </div>
-                            <p style="color: black;">Google Calendar</p>
+                            <p style="color: black;" class="calendar">Google Calendar</p>
                         </div>
                         <div>
                             <div style="color: black;">
                                 <i class="fa-brands fa-google-drive"></i>
                             </div>
-                            <p style="color: black;">Class Drive folder</p>
+                            <p style="color: black;" class="drive">Class Drive folder</p>
                         </div>
                     </div>
                 </div>
