--- a/teacher_classwork.html
+++ b/teacher_classwork.html
@@ -199,13 +199,13 @@
                             <div>
                                 <i class="fa-regular fa-calendar"></i>
                             </div>
-                            <p>Google Calendar</p>
+                            <p class="calendar-teacher">Google Calendar</p>
                         </div>
                         <div>
                             <div>
                                 <i class="fa-brands fa-google-drive"></i>
                             </div>
-                            <p>Class Drive folder</p>
+                            <p class="drive-teacher">Class Drive folder</p>
                         </div>
                     </div>
                 </div>
