--- a/teacher_stream.html
+++ b/teacher_stream.html
@@ -45,7 +45,7 @@
                 </div>
             </div>
         </div>
-        
+
         <div class="main">
             <div class="top-main">
                 <div class="customize-button">
@@ -63,7 +63,7 @@
                 </div>
             </div>
             <div class="bottom-main">
-                <div class="bottom-left-main">
+                <div class="bottom-left-main bottom-left-main-teacher">
                     <div class="google-meet">
                         <div>
                             <div>Class code</div>
@@ -90,16 +90,16 @@
                             <div class="profile-pic"><img
                                 src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
                                 alt="profile-pic"></div>
-                            <div><input  placeholder="Announce something to your class" type="text"></div>
+                            <div><input placeholder="Announce something to your class" type="text"></div>
                             <div>
                                 <i class="fa-solid fa-share-from-square"></i>
                             </div>
                         </div>
                         <div id="second-state-announcement" class="announcement-post hide">
-                            <div  class="text-input">
+                            <div class="text-input">
                                 <div id="editor">
-                                        <p></p>
-                                    </div>
+                                    <p></p>
+                                </div>
                                 <div id="toolbar" class="toolbar">
                                     <button class="ql-bold">Bold</button>
                                     <button class="ql-italic">Italic</button>
@@ -131,75 +131,10 @@
                                 </div>
                             </div>
                         </div>
-
                     </div>
-                    <div class="announcements">
-                        <!-- <div class="announcement"> -->
-                            <!-- <div class="announcement-top">
-                                <div>
-                                    <div class="user-data">
-                                        <div class="profile-pic"><img
-                                            src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
-                                            alt="profile-picture"></div>
-                                        <div>
-                                            <div class="name">Joe Haddad</div>
-                                            <p class="date">02:32</p>
-                                        </div>
-                                    </div>
-                                    <div>
-                                        <i class="fa-solid fa-ellipsis-vertical fa-lg"></i>
-                                    </div>
-                                </div>
-                                <div class="announcement-content">
-                                    Mohammad Hussein was here
-                                </div>
-                            </div>
-                            <div class="announcement-comment">
-                                <div class="profile-pic"><img
-                                    src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
-                                    alt="profile-picture"></div>
-                                <div class="comment-input"><input placeholder="Add class comment" type="text"></div>
-                                <div class="share-icon">
-                                    <i class="fa-solid fa-share"></i>
-                                </div>
-                            </div> -->
-
-                        <!-- </div> -->
-
-                        <!-- <div class="announcement">
-                            <div class="announcement-top">
-                                <div>
-                                    <div class="user-data">
-                                        <div class="profile-pic"><img
-                                            src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
-                                            alt="profile-picture"></div>
-                                        <div>
-                                            <div class="name">Joe Haddad</div>
-                                            <p class="date">02:32</p>
-                                        </div>
-                                    </div>
-                                    <div>
-                                        <i class="fa-solid fa-ellipsis-vertical fa-lg"></i>
-                                    </div>
-                                </div>
-                                <div class="announcement-content">
-                                    Mohammad Hussein was here
-                                </div>
-                            </div>
-                            <div class="announcement-comment">
-                                <div class="profile-pic"><img
-                                    src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
-                                    alt="profile-picture"></div>
-                                <div class="comment-input"><input placeholder="Add class comment" type="text"></div>
-                                <div class="share-icon">
-                                    <i class="fa-solid fa-share"></i>
-                                </div>
-                            </div>
-                        </div> -->
-                    </div>
+                    <div class="announcements"></div>
                 </div>
             </div>
-
             <script>
                 var editor = new Quill('#editor', {
                     modules: {
