--- a/assignment.html
+++ b/assignment.html
@@ -86,17 +86,20 @@
                         <div>Your work</div>
                         <div>Assigned</div>
                     </div>
-                    <div class="files">
-                        <div>
-                            <button>
-                                <div>+</div>
-                                <div>Add or create</div>
-                            </button>
+                    <form>
+                        <div class="files">
+                            <input type="file" style="display: none;" id="file-input">
+                            <div>
+                                <label for="file-input" class="add-create">
+                                    <div>+</div>
+                                    <div>Add or create</div>
+                                </label>
+                            </div>
                         </div>
-                    </div>
-                    <div class="mark-as-done">
-                        <button>Mark as done</button>
-                    </div>
+                        <div class="mark-as-done">
+                            <button type="submit">Mark as done</button>
+                        </div>
+                    </form>
                 </div>
                 <div class="assignment-private-comments">
                     <div>
