fetched the topics of a specific class and displayed them in a dropdown

--- a/teacher_classwork.html
+++ b/teacher_classwork.html
@@ -112,6 +112,8 @@
                             <label for="dateInput">Due</label>
                             <input type="date" id="dateInput">
                         </div>
+                        <select class="dropdown" id="topics">
+                        </select>
                     </div>
                 </div>
             </div>
