--- a/student_classwork.html
+++ b/student_classwork.html
@@ -133,9 +133,9 @@
         </div>
       </div>
       <div class="tabs">
-        <div id="stream-id">Stream</div>
-        <div id="classwork-id">Classwork</div>
-        <div id="people-id">People</div>
+        <div>Stream</div>
+        <div>Classwork</div>
+        <div>People</div>
       </div>
       <div class="right-classroom-navbar">
         <div>
@@ -152,10 +152,7 @@
     <div class="classwork-content">
       <div class="topics-section">
         <p style="color: black; font-weight: bold">All topics</p>
-        <div>
-          <p>UIX</p>
-          <p>Soft Skills</p>
-        </div>
+        <div id="topic_name"></div>
       </div>
       <div class="classwork-right">
         <div class="classwork-header">
@@ -191,60 +188,7 @@
         </div>
         <div class="topics">
           <div class="topic">
-            <div class="topic-header">
-              <div class="topic-name" style="color: black">UIX</div>
-              <div>
-                <i class="fa-solid fa-ellipsis-vertical"></i>
-              </div>
-            </div>
-            <div class="assignments">
-              <div class="assignment">
-                <div class="assignment-data">
-                  <div style="background-color: #ccc">
-                    <i class="fa-regular fa-rectangle-list fa-lg"></i>
-                  </div>
-                  <div class="assignment-name">Assignment One</div>
-                </div>
-                <div class="date">Posted 2:36PM</div>
-              </div>
-              <div class="assignment">
-                <div class="assignment-data">
-                  <div style="background-color: #ccc">
-                    <i class="fa-regular fa-rectangle-list fa-lg"></i>
-                  </div>
-                  <div class="assignment-name">Assignment One</div>
-                </div>
-                <div class="date">Posted 2:36PM</div>
-              </div>
-            </div>
-          </div>
-          <div class="topic">
-            <div class="topic-header">
-              <div class="topic-name" style="color: black">UIX</div>
-              <div>
-                <i class="fa-solid fa-ellipsis-vertical"></i>
-              </div>
-            </div>
-            <div class="assignments">
-              <div class="assignment">
-                <div class="assignment-data">
-                  <div style="background-color: #ccc">
-                    <i class="fa-regular fa-rectangle-list fa-lg"></i>
-                  </div>
-                  <div class="assignment-name">Assignment One</div>
-                </div>
-                <div class="date">Posted 2:36PM</div>
-              </div>
-              <div class="assignment">
-                <div class="assignment-data">
-                  <div style="background-color: #ccc">
-                    <i class="fa-regular fa-rectangle-list fa-lg"></i>
-                  </div>
-                  <div class="assignment-name">Assignment One</div>
-                </div>
-                <div class="date">Posted 2:36PM</div>
-              </div>
-            </div>
+            <div id="topic-ass"></div>
           </div>
         </div>
       </div>
