--- a/teacher_classwork.html
+++ b/teacher_classwork.html
@@ -131,12 +131,13 @@
     <div id="topic-modal" class="add-topic-modal hide">
       <div id="topic-box" class="box">
         <p>Add topic</p>
-        <div><input placeholder="Topic" type="text" /></div>
+        <div><input id="topic" placeholder="Topic" type="text" /></div>
         <div class="buttons">
           <button class="cancel-button">Cancel</button>
-          <button>Add</button>
+          <button id="add_button">Add</button>
         </div>
       </div>
+          
     </div>
     <!-- NAVBAR -->
     <div class="classroom-navbar">
